<resources>
    <string name="app_name">Jarvis Contador</string>
    <string name="content_description_media">fondo</string>
    <string name="hint_usr">Correo de usuario</string>
    <string name="usr">Usuario</string>
    <string name="hint_pass">Password</string>
    <string name="pass">Contraseña</string>
    <string name="usuario">Registrar usuario</string>
    <string name="login">Ingresar</string>
    <string name="new_usr">Alta de Usuario</string>
</resources>